--- a/contact-support.html
+++ b/contact-support.html
@@ -23,7 +23,10 @@
   <!-- Header -->
   <header class="bg-gradient-to-r from-amber-800 to-amber-900 text-white py-6 shadow-lg sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
-      <h1 class="text-3xl font-bold">Cà Phê Sài Gòn</h1>
+      <div>
+        <i class="fas fa-coffee text-4xl text-amber-100"></i>
+          <h1 class="text-3xl font-bold">Cà Phê Sài Gòn</h1>
+      </div>
       <a href="index.html" class="bg-white/20 hover:bg-white/30 px-6 py-3 rounded-lg text-lg font-medium flex items-center">
         <svg class="mr-2 w-6 h-6 fill-current" viewBox="0 0 24 24">
           <path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"/>
