--- a/contact-support.html
+++ b/contact-support.html
@@ -23,7 +23,7 @@
   <!-- Header -->
   <header class="bg-gradient-to-r from-amber-800 to-amber-900 text-white py-6 shadow-lg sticky top-0 z-50">
     <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
-      <div>
+      <div class="flex items-center">
         <i class="fas fa-coffee text-4xl text-amber-100"></i>
           <h1 class="text-3xl font-bold">Cà Phê Sài Gòn</h1>
       </div>
