--- a/shipping.html
+++ b/shipping.html
@@ -17,11 +17,11 @@
 </head>
 <body class="bg-gradient-to-br from-amber-50 to-orange-100 text-gray-800 min-h-screen">
   <!-- Header -->
-  <header class="bg-gradient-to-r from-amber-800 to-amber-900 text-white py-4 md:py-6 shadow-lg sticky top-0 z-50">
-    <div class="max-w-7xl mx-auto px-4 flex flex-wrap justify-between items-center">
-      <h1 class="text-2xl md:text-3xl font-bold mb-2 md:mb-0">Cà Phê Sài Gòn</h1>
-      <a href="index.html" class="bg-white/20 hover:bg-white/30 px-4 md:px-6 py-2 md:py-3 rounded-lg transition-colors duration-200 text-base md:text-lg font-medium flex items-center">
-        <svg class="mr-2 w-5 h-5 md:w-6 md:h-6 fill-current" viewBox="0 0 24 24">
+ <header class="bg-gradient-to-r from-amber-800 to-amber-900 text-white py-4 shadow-lg sticky top-0 z-50">
+    <div class="max-w-7xl mx-auto px-4 flex justify-between items-center">
+      <h1 class="text-xl sm:text-2xl md:text-3xl font-bold">Cà Phê Sài Gòn</h1>
+      <a href="index.html" class="bg-white/20 hover:bg-white/30 px-3 sm:px-4 md:px-6 py-2 md:py-3 rounded-lg text-sm sm:text-base md:text-lg font-medium flex items-center">
+        <svg class="mr-2 w-5 h-5 md:w-6 md:h-6 fill-current" viewBox="0 0 24 24" role="img" aria-label="Trang chủ">
           <path d="M12 3L2 12h3v8h6v-6h2v6h6v-8h3L12 3z"/>
         </svg>
         Về Trang Chủ
